[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.poetry]
name = "work-schedule"
version = "0.1.0"
description = ""
authors = ["lordtachen <matos.aes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
pyyaml = "^6.0.1"
pydantic = {extras = ["email"], version = "^2.5.2"}
httpx = "^0.25.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pre-commit = "^3.6.1"
pytest-cov = "^4.1.0"
pip = "^23.3.2"
install = "^1.3.5"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "--cov=work_schedule_backend", "--cov-fail-under=70"]

[tool.ruff]
fix = true
line-length = 88
include = ["*.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN101", # No type annotation for self
  "B008", # Function calls in argument defaults
  "D", # Missing Docstring
  "FA100", # Missing __future__ import
  "FA102", # Missing __future__ import
  "SLF001", # Private member accessed
  "T201", # check for print statements
]


[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "ANN", # Missing type annotation
  "INP001", # Missing __init__.py
  "PLR2004", # Using constant instead of literal
  "S101", # Use of `assert` detected
]
