[project]
name = "work_schedule"
version = "0.1.0"
description = ""
authors = [{name = "LordTachen", email = "matos.aes@gmail.com"},]
readme = "README.md"
dynamic =["dependencies"]
requires-python = ">=3.12"

dependencies=[
"fastapi>=0.104.1",
"uvicorn>=0.24.0.post1",
"sqlalchemy>=2.0.23",
"pyyaml>=6.0.1",
"pydantic[email] (>=2.10.5,<3.0.0)",
"httpx>=0.25.2"]

[project.urls]
repository = "https://github.com/lordtachen/work-schedule"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]

packages = [
  { include = "work_schedule_backend" },
  { include = "shared"}
]




[project.optional-dependencies]
dev = [
"pytest>=8.0.0",
"pre-commit>=3.6.1",
"pytest-cov>=4.1.0",
"pip>=23.3.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "--cov=work_schedule_backend", "--cov-fail-under=70"]

[tool.black]
line-length = 88

[tool.ruff]
fix = true
line-length = 88
include = ["*.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN101", # No type annotation for self
  "B008", # Function calls in argument defaults
  "D", # Missing Docstring
  "FA100", # Missing __future__ import
  "FA102", # Missing __future__ import
  "SLF001", # Private member accessed
  "T201", # check for print statements
  "EXE002", # The file is executable but no shebang is present
]


[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "ANN", # Missing type annotation
  "INP001", # Missing __init__.py
  "PLR2004", # Using constant instead of literal
  "S101", # Use of `assert` detected
]
